--- a/smurfs/src/components/App.css
+++ b/smurfs/src/components/App.css
@@ -2,6 +2,9 @@
   text-align: center;
 }
 
+img {
+  width: 100vw;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
