--- a/smurfs/src/components/App.css
+++ b/smurfs/src/components/App.css
@@ -1,16 +1,12 @@
 .App {
   text-align: center;
+  background-image: url(http://kidscreen.com/wp/wp-content/uploads/2013/05/TheSmurfs_01.jpg);
+  height: 100vh;
 }
-
-img {
-  width: 100vw;
+.App h1 {
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 1rem;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
   background-color: #222;
   height: 150px;
@@ -25,6 +21,7 @@ img {
 .App-intro {
   font-size: large;
 }
+
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
